fixes linear-gradient on firefox

--- a/_sass/_includes/home/carousel.scss
+++ b/_sass/_includes/home/carousel.scss
@@ -85,6 +85,9 @@ body > main.home > section.carousel {
           left: 0;
           right: 0;
           content: '';
+          background: -webkit-linear-gradient(transparent, rgba(0,0,0,0.75));
+          background: -moz-linear-gradient(transparent, rgba(0,0,0,0.75));
+          background: -o-linear-gradient(transparent, rgba(0,0,0,0.75));
           background: linear-gradient(transparent, rgba(0,0,0,0.75));
         }
 
